fix read message iframe height too small

--- a/src/components/decrypt-message/DecryptMessage.scss
+++ b/src/components/decrypt-message/DecryptMessage.scss
@@ -81,8 +81,9 @@
       .plain-text {
         flex-grow: 1;
         iframe {
-          width: 100%;
-          height: 100%;
+          position: absolute;
+          width: 93%;
+          height: 95%;
           margin-bottom: 0;
           color: black;
           background-color: transparent !important;
